[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wsj-scraper-cli"
version = "0.1.0"
description = "CLI tool for scraping WSJ articles and generating bilingual study PDFs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.40.0",
  "playwright-stealth>=1.0.6",
  "httpx>=0.25.0",
  "reportlab>=4.0.0",
  "python-dotenv>=1.0.0",
  "pypdf>=6.7.5",
  "boto3>=1.34.0",
]

[project.scripts]
wsj-scraper = "run_scraper:main"

[project.optional-dependencies]
viewer = ["flask>=3.0.0"]

[tool.setuptools]
packages = ["wsj_scraper"]
py-modules = ["run_scraper"]
